--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -355,6 +355,7 @@ button[role=button] {
 	max-width: 300px; /*fixed thumbnail sizes for home page*/
 	min-height: 200px;
 	margin-bottom: 20px;
+	padding: 30px 0;
 
 	display: flex;
 	flex-direction: column;
