--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -354,8 +354,7 @@ button[role=button] {
 .home-block-article {
 	max-width: 300px; /*fixed thumbnail sizes for home page*/
 	min-height: 200px;
-	margin-bottom: 20px;
-	padding: 30px 0;
+	margin: 0px 100px 30px 100px;
 
 	display: flex;
 	flex-direction: column;
