--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -384,7 +384,17 @@ button[role=button] {
 	transform: translateY(-5px);
 }
 
-/*Issue menu on home page*/
+/*Access Barriers carousel on home page*/
+.ab-carousel .metaslider .caption-wrap {
+	background: none !important;
+	color: #2AAD69 !important;
+	opacity: 1 !important;
+}
+
+.ab-carousel .metaslider .caption {
+	
+}
+
 .issue-nav {
 	margin: auto;
 	margin-top: -20px;
