--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -78,6 +78,19 @@ h2 {
 	display: none;
 }
 
+#main::before {
+	content: "";
+	position: absolute;
+	top: 0; 
+	left: 0;
+	width: 100%; 
+  	height: 100%;
+  	z-index: -1;
+  	opacity: .2;
+
+	background: repeating-linear-gradient(20deg, white 0%, white 20%, #2AAD69 21%)
+}
+
 /*------------------------------------*\
     STRUCTURE
 \*------------------------------------*/
@@ -350,7 +363,7 @@ button[role=button] {
 
 	transition: .2s;
 
-	background: linear-gradient(transparent, #2AAD69);
+	background: linear-gradient(transparent 80%, #2AAD69);
 }
 
 .home-block-article {
@@ -372,7 +385,7 @@ button[role=button] {
 
 	transition: .2s;
 
-	background: transparent; /* stops gradient from home-block */
+	background: white; /* stops gradient from home-block */
 }
 
 .home-block-article img {
@@ -437,6 +450,8 @@ button[role=button] {
 	width: 100%;
 	z-index: -1;
 	top: 85px;
+
+	background: linear-gradient(45deg, white, #2AAD69 5%, white 5%)
 }
 
 .single > [id^="post-"] > a {
