--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -86,7 +86,7 @@ h2 {
 	width: 100%; 
   	height: 100%;
   	z-index: -1;
-  	opacity: .2;
+  	opacity: .12;
 
 	background: repeating-linear-gradient(20deg, white 0%, white 20%, #2AAD69 21%)
 }
@@ -363,7 +363,7 @@ button[role=button] {
 
 	transition: .2s;
 
-	background: linear-gradient(transparent 80%, #2AAD69);
+	/*background: linear-gradient(transparent 80%, #2AAD69);*/
 }
 
 .home-block-article {
@@ -537,6 +537,8 @@ h1 > a:hover {
 	border-radius: 3px;
 	width: 200px;
 	object-fit: cover;
+
+	background-color: white;
 }
 
 /*------------------------------------*\
