--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -623,9 +623,9 @@ p.attachment {
 }
 /*display collapible menu icon, remove default (nav) menu, reduce search bar size*/
 @media only screen and (max-width:1100px) {
-	.header {
+	/*.header {
 		margin-bottom: 0px;
-	}
+	}*/
 
 	#menu-icon {
 		display: inline-block;
