--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -622,7 +622,7 @@ p.attachment {
 	}*/
 }
 /*display collapible menu icon, remove default (nav) menu, reduce search bar size*/
-@media only screen and (max-width:1100px) {
+@media only screen and (max-width:1050px) {
 	/*.header {
 		margin-bottom: 0px;
 	}*/
@@ -635,10 +635,16 @@ p.attachment {
 	.nav a {
 		display: none;
 	}
+
+	.search-input,
+	button[role=button] {
+		font-size: 12px;
+		font-weight: normal;
+	}
 }
 /*reduce default (nav) menu font size & search bar size
 	min-width required for reasons that escape me now (some display issue, iirc)*/
-@media only screen and (min-width: 1100px) and (max-width:1350px) {
+@media only screen and (min-width: 1050px) and (max-width:1250px) {
 	.nav a,
 	.search-input,
 	button[role=button] {
