adding copyright to footer

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -336,6 +336,8 @@ button[role=button] {
 }
 
 .copyright {
+	white-space: pre-line;
+	padding-right: 20px;
 }
 
 /*------------------------------------*\
