updating front page layout

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -413,6 +413,7 @@ button[role=button] {
 }
 
 .ab-carousel .caption {
+	text-transform: uppercase;
 	color: #282f5d;
 }
 
@@ -425,8 +426,18 @@ button[role=button] {
 	text-align: center;
 }
 
-.ab-carousel .caption {
-	text-transform: uppercase;
+#front-page-container {
+	margin: auto;
+	max-width: 1000px;
+}
+
+#whats-new {
+	margin-left: -300px; /*position:relative messes up the background*/;
+	/*padding: 150px 300px 0 0;
+
+	background-color: #F6F6F6;
+
+	z-index: -1;*/
 }
 
 /*****AB NAV (DEPRECATED)******/
