updating front page layout

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -426,19 +426,19 @@ button[role=button] {
 	text-align: center;
 }
 
-#front-page-container {
+/*#front-page-container {
 	margin: auto;
 	max-width: 1000px;
 }
 
 #whats-new {
-	margin-left: -300px; /*position:relative messes up the background*/;
+	margin-left: -300px;
 	padding: 150px 300px 0 0;
 
 	background-color: #F6F6F6;
 
 	z-index: -1;
-}
+}*/
 
 /*****AB NAV (DEPRECATED)******/
 
