--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -426,19 +426,26 @@ button[role=button] {
 	text-align: center;
 }
 
-/*#front-page-container {
+#front-page-container {
 	margin: auto;
-	max-width: 1000px;
-}*/
+	width: 1000px;
 
-#whats-new {
-	padding-top: 150px;
-/*	margin-left: -300px;
-	padding: 150px 300px 0 0;
+	display: flex;
+	justify-content: center;
 
 	background-color: #F6F6F6;
+}
 
-	z-index: -1;*/
+#whats-new {
+	flex-grow: 2;
+	padding-top: 150px;
+
+	background-color: #F6F6F6;
+}
+
+#latest {
+	flex-grow: 1;
+	padding-top: 150px;
 }
 
 /*****AB NAV (DEPRECATED)******/
