modding splash page

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -430,6 +430,7 @@ button[role=button] {
 	width: 100%;
 
 	display: flex;
+	flex-flow: column nowrap;
 	justify-content: center;
 
 	background-color: #F6F6F6;
