modding splash page

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -595,8 +595,8 @@ h1 > a:hover {
 }
 
 .loop-thumbnail > img {
-	box-shadow: 0 0 10px #555;
-	border-radius: 3px;
+	/*box-shadow: 0 0 10px #555;
+	border-radius: 3px;*/
 	width: 200px;
 	object-fit: cover;
 
