--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -308,7 +308,7 @@ button[role=button] {
 
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-end;
 
 	background-color: #353535;
 
@@ -339,7 +339,7 @@ button[role=button] {
 
 .copyright {
 	white-space: pre-line;
-	padding-right: 20px;
+	padding: 0 20px 20px 0;
 }
 
 /*------------------------------------*\
