--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -338,12 +338,16 @@ button[role=button] {
 }
 
 #footer-right {
+	align-self: stretch;
+
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 }
 
 .copyright {
+	text-align: right;
+
 	white-space: pre-line;
 	padding: 0 20px 20px 0;
 }
