--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -465,23 +465,17 @@ button[role=button] {
 
 	display: flex;
 	justify-content: center;
-
-	/*background-color: #F6F6F6;*/
 }
 
 #whats-new {
 	flex-grow: 2;
 	padding-top: 150px;
-
-	/*background-color: #F6F6F6;*/
 }
 
 #latest {
 	min-width: 33%;
 	flex-grow: 1;
-	padding-top: 150px;
-
-	/*background-color: #F6F6F6;*/
+	padding: 150px 0 0 10px;
 }
 
 #recent-blog-posts {
