--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -570,8 +570,8 @@ button[role=button] {
 	width: 100%;
 	font-size: 1.5em;
 
-	padding: 5px 30px;
-	/*border-radius: 20px;
+	/*padding: 5px 30px;
+	border-radius: 20px;
 	box-shadow: 0 0 10px #555;
 	background-color: #FFF;*/
 
