updating summits page

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -623,7 +623,12 @@ h1 > a:hover {
 	background-color: white;
 }
 
-.summits-thumbnail > img{
+.summits-thumbnail {
+	display: flex;
+	justify-content: center;
+}
+
+.summits-thumbnail > img {
 	max-height: 400px;
 }
 
