--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -481,12 +481,12 @@ button[role=button] {
 
 #split-page-left {
 	max-width: 65%;
-	padding-top: 150px;
+	/*padding-top: 150px;*/
 }
 
 #split-page-right {
 	width: 31%;
-	padding: 150px 10px 0 10px;
+	padding: 0px 10px 0 10px;
 
 	display: flex;
 	flex-direction: column;
