added some header images, various cosmetic changes

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -100,6 +100,11 @@ button {
 	background: repeating-linear-gradient(20deg, white 0%, white 20%, #2AAD69 21%)
 }*/
 
+.no-padding {
+	padding: 0 !important;
+	line-height: 1em !important;
+}
+
 /*------------------------------------*\
     STRUCTURE
 \*------------------------------------*/
