changed text justification for headers

--- a/wp-content/themes/ifpa_custom/style.css
+++ b/wp-content/themes/ifpa_custom/style.css
@@ -504,6 +504,7 @@ button[role=button] {
 	font-weight: 700;
 	line-height: 100px;
 	text-transform: uppercase;
+	text-align: left;
 	color: #282f5d;
 }
 
